luxtensor/crates/luxtensor-oracle/errors4.txt
cargo :     Checking luxtensor-oracle v0.1.0 (D:
\venera\cardano\moderntensor\moderntensor\luxten
sor\crates\luxtensor-oracle)
At line:1 char:1
+ cargo check 2>&1 | Out-File -FilePath 
errors4.txt -Encoding utf8; Get ...
+ ~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (   
     Checking lu...xtensor-oracle):String) [],  
   RemoteException
    + FullyQualifiedErrorId : NativeCommandErro 
   r
 
warning: unused import: `futures::Stream`
 --> crates\luxtensor-oracle\src\listener.rs:6:5
  |
6 | use futures::Stream;
  |     ^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of 
`#[warn(unused)]`) on by default

warning: unused import: `error`
 --> 
crates\luxtensor-oracle\src\submitter.rs:6:21
  |
6 | use tracing::{info, error};
  |                     ^^^^^

error[E0716]: temporary value dropped while 
borrowed
  --> 
crates\luxtensor-oracle\src\listener.rs:45:26
   |
45 |           let mut stream = self.contract
   |  __________________________^
46 | |             
.event::<AirequestCreatedFilter>()
   | |__________________________________________
____^ creates a temporary value which is freed 
while still in use
...
49 |               .map_err(|e| 
OracleError::Contract(e.to_string()))?;
   |                                            
                      - temporary value is 
freed at the end of this statement
...
53 |           while let Some(event_result) = 
stream.next().await {
   |                                          
------ borrow later used here
   |
   = note: consider using a `let` binding to 
create a longer lived value

warning: unused variable: `input_data`
  --> 
crates\luxtensor-oracle\src\processor.rs:21:9
   |
21 |         input_data: Bytes,
   |         ^^^^^^^^^^ help: if this is 
intentional, prefix it with an underscore: 
`_input_data`
   |
   = note: `#[warn(unused_variables)]` (part of 
`#[warn(unused)]`) on by default

For more information about this error, try 
`rustc --explain E0716`.
warning: `luxtensor-oracle` (lib) generated 3 
warnings
error: could not compile `luxtensor-oracle` 
(lib) due to 1 previous error; 3 warnings 
emitted
